--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,20 @@ OPENAI_API_KEY=your_openai_api_key_here
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 HUGGINGFACE_TOKEN=your_huggingface_token_here
 
-# Model Configuration
-REASONING_MODEL=gpt-4
-EMBEDDING_MODEL=all-MiniLM-L6-v2
+# Primary & fallback
+REASONING_MODEL=gpt-4o
+ANSWER_MODEL=gpt-4o-mini
+FALLBACK_MODEL=gpt-4o-mini
+
+# Embeddings
+EMBEDDING_MODEL=bge-small-en-v1.5
+EMBEDDING_DIM=384   # 1536 if text-embedding-3-small, 3072 if ...-large
+
+# RAG knobs
+CHUNK_TOKENS=300
+CHUNK_OVERLAP=60
+RETRIEVER_K=12
+FUSION_TOP_K=6
 
 # Database Configuration
 CHROMA_DB_PATH=./chroma_db
