--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ x-env: &default_env
   CHROMA_DB_PATH: /app/chroma_db
   DATA_PATH: /app/data
   SESSIONS_PATH: /app/sessions
+  REDIS_URL: ${REDIS_URL:-}
+
 
 services:
   app:
@@ -43,8 +45,8 @@ services:
       interval: 10s
       timeout: 3s
       retries: 5
-    ports:
-      - "6379:6379"
+    #ports:
+    #  - "6379:6379"
     volumes:
       - redis_data:/data
     restart: unless-stopped
